Almost finished generating html

--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -103,32 +103,7 @@
     </div>
     <!--HTML sample-->
     <div class="main-grid">
-      <div class="main-pc-box">
-        <div class="image-box">
-          <img class="computer-image"src="https://banner2.cleanpng.com/20180711/uyl/kisspng-asus-rog-strix-computer-monitors-republic-of-gamer-rog-5b465bf2ac1324.1265418415313377147048.jpg" alt="pc-image">
-        </div>
-        <div class="details">
-        <p class="Brand-name">Brand: Asus</p>
-        <p class="CPU">CPU: I9-13900</p>
-        <p class="GPU">GPU: RTX4090</p>
-        <p class="RAM">RAM: 64GB</p>
-        <p class="SSD">SSD: 2TB</p>
-        <p class="Price">Price: 4000$</p>
-      </div>
-      </div>
-      <div class="main-pc-box">
-        <div class="image-box">
-          <img class="computer-image"src="https://banner2.cleanpng.com/20180711/uyl/kisspng-asus-rog-strix-computer-monitors-republic-of-gamer-rog-5b465bf2ac1324.1265418415313377147048.jpg" alt="pc-image">
-        </div>
-        <div class="details">
-        <p class="Brand-name">Brand: Asus</p>
-        <p class="CPU">CPU: I9-13900</p>
-        <p class="GPU">GPU: RTX4090</p>
-        <p class="RAM">RAM: 64GB</p>
-        <p class="SSD">SSD: 2TB</p>
-        <p class="Price">Price: 4000$</p>
-      </div>
-      </div>
     </div>
+    <script type = "module" src="Frontpage.js"></script>
   </body>
 </html>
