Fixed the buttons, added ascending price sorting

--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -47,6 +47,9 @@
         <label>
           <input type="checkbox" id="Dell">Dell
         </label>
+        <label>
+          <input type="checkbox" id="Others">Others
+        </label>
         <button class="reset-button"> Reset </button>
       </div>
       <!--Sidebar ram selector-->
@@ -97,11 +100,11 @@
     <div class="main-sort-by">
       <label for="sort-by-selector">Sort: </label>
       <select class="sort-by" id="sort-by-selector" name="sort-by">
+        <option value="Popularity">By Popularity</option>
         <option value="Ascending">Price: Ascending</option>
         <option value="Descending">Price: Descending</option>
       </select>
     </div>
-    <!--HTML sample-->
     <div class="main-grid">
     </div>
     <script type = "module" src="Frontpage.js"></script>
