--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -50,7 +50,9 @@
         <label>
           <input type="checkbox" id="Others">Others
         </label>
-        <button class="reset-button"> Reset </button>
+        <div class="buttons">
+        <button class="apply-button">Apply</button>
+        <button class="reset-button"> Reset </button></div>
       </div>
       <!--Sidebar ram selector-->
       <p>RAM ammount</p>
@@ -70,7 +72,9 @@
         <label>
           <input type="checkbox" id="over64gb">&#62;64 GB
         </label>
-        <button class="reset-button">Reset</button>
+        <div class="buttons">
+          <button class="apply-button">Apply</button>
+          <button class="reset-button"> Reset </button></div>
       </div>
       <!--Sidebar Storage Selector-->
       <p>Storage</p>
@@ -90,9 +94,9 @@
         <label>
           <input type="checkbox" id="over1000gb">&#62;1 TB
         </label>
-        <button class="reset-button">Reset</button>
-
-
+        <div class="buttons">
+          <button class="apply-button">Apply</button>
+          <button class="reset-button"> Reset </button></div>
         </div>
       </div>
     </div>
