extracted the value from the price input

--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -22,7 +22,7 @@
     <div class="sidebar-main">
       <!--Sidebar price-->
       <p class="sidebar-price-text"> Price</p>
-      <input class="sidebar-price-input" placeholder="0-9999$">
+      <input class="sidebar-price-input" placeholder="0-9999$" id="sidebar-price">
       <!--Sidebar brand picker-->
       <div class="sidebar-brand-picker">
         <p class="sidebar-brand-text">Brand</p>
