Got 3 of the 5 Comparasions done

--- a/Front Page/Comparepage.html
+++ b/Front Page/Comparepage.html
@@ -17,15 +17,23 @@
         <img src="https://static.thenounproject.com/png/4038155-200.png"   class="header-image">
       </div>
       </div>
+      <div class="full-body">
+      <h1 class="compare-title">Comparasion</h1>
       <div class="main-body">
-        <div class="right-data">
-          
-        </div>
         <div class="left-data">
-
+        </div>
+        <div class="right-data">
         </div>
       </div>
+      <div class="comparasion-details">
+      <p class="CPU-difference"></p>
+      <p class="GPU-difference"></p>
+      <p class="RAM-difference"></p>
+      <p class="SSD-difference"></p>
+      <p class="Price-difference"></p>
     </div>
+    </div>
+  </div>
     <script type="module" src="Comparepage.js"></script>
   </body>
 </html>
