Some minor changes to the compare button

--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -13,7 +13,8 @@
         <h1>Pc Picker</h1>
       </div>
       <div class="header-right">
-        <a href="Comparepage.html"><img src="https://www.freeiconspng.com/thumbs/compare-icon/compare-icon-0.png" class="header-image"></a>
+        <a href="Comparepage.html"><img src="https://www.freeiconspng.com/thumbs/compare-icon/compare-icon-0.png" class="header-image">
+          <span class="compare-badge">0/2</span></a>
         <img src="https://static.thenounproject.com/png/4038155-200.png" class="header-image">
       </div>
     </div>
