almost finished the basic project

--- a/Front Page/Frontpage.html
+++ b/Front Page/Frontpage.html
@@ -28,8 +28,11 @@
       </select>
         <p class="price-box-text">Price Limit: </p>
         <input class="sidebar-price-input" placeholder="Maximum PC Price" id="sidebar-price">
+        <button class="reset-compare">Reset Comparison</button>
     </div>
+
     <div class="main-grid"></div>
+        <p>Created by Fortuna Daniel (<a target = "_blank"href="https://github.com/twelfydelfy">twelfydelfy</a>), data may be innacurate</p>
     <script type="module" src="Frontpage.js"></script>
   </body>
 </html>
