finished up the project

--- a/Front Page/Comparepage.html
+++ b/Front Page/Comparepage.html
@@ -22,6 +22,7 @@
       <div class="main-body">
         <div class="left-data">
         </div>
+        <p class="VS">VS</p>
         <div class="right-data">
         </div>
       </div>
