animations, and some style changes

--- a/Front Page/Comparepage.html
+++ b/Front Page/Comparepage.html
@@ -11,9 +11,9 @@
     <div class="main-box">
       <div class="header-box">
         <div class="header-left">
-        <a href="Frontpage.html"><h1>Pc Picker</h1</a></div>
+        <a href="Frontpage.html" style="text-decoration: none;"><h1 class="site-title">Pc Picker</h1</a></div>
         <div class="header-right">
-        <a href="Comparepage.html"><img src="https://www.freeiconspng.com/thumbs/compare-icon/compare-icon-0.png" class="header-image"></a>
+        <a href="Comparepage.html"></a>
         <img src="https://static.thenounproject.com/png/4038155-200.png"   class="header-image">
       </div>
       </div>
